Refactor modules and improve error handling
- Updated `validateRequest` in `Api.fs` to handle `Russian` requests directly.
- Renamed `Error` case to `Fail` in `Request` type in `Domain.fs`.
- Renamed `Notification` module and functions for clarity.
- Removed `Telegram` module from `Filter.fs`.
- Refactored `Query` module in `InMemoryRepository.fs` and `Repository.fs`.
- Renamed functions and types in `Consumer.fs` for consistency.
- Added new `Chat` type and `External` module in `Domain.fs`.
- Improved module imports and error handling in `Message.fs`.
- Streamlined `Produce` module in `Producer.fs`.
- Added configuration loading and improved logging in `Program.fs`.
- Updated project references and added `appsettings.yaml` in `embassy-access-telegram.fsproj` and `embassy-access-worker.fsproj`.
- Renamed modules and types in `Command.fs` and `Filter.fs`.
- Improved initialization message in `Initializer.fs`.
- Refactored `Russian.fs` for clarity and better error handling.
- Marked `fsharp-infrastructure` and `fsharp-web` submodules as dirty.
- Added logging configuration in `appsettings.yaml`.
- Updated `Mapper.fs` to handle new `Canceled` error type.
- Refactored `Client.fs` to use `Consumer` and `Producer` modules.
- Renamed types and modules in `Domain.fs` for better data handling.

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -1,24 +1,33 @@
-<Project Sdk="Microsoft.NET.Sdk">
-  
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-  </PropertyGroup>
-   
-  <ItemGroup>
-    <Compile Include="Domain.fs" />
-    <Compile Include="persistence\Command.fs" />
-    <Compile Include="persistence\Filter.fs" />
-    <Compile Include="persistence\InMemoryRepository.fs" />
-    <Compile Include="persistence\Repository.fs" />
-    <Compile Include="Message.fs" />
-    <Compile Include="Producer.fs" />
-    <Compile Include="Consumer.fs" />
-    <Compile Include="Program.fs" />
-  </ItemGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\embassy-access-core\embassy-access-core.fsproj" />
-  </ItemGroup>
-  
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net8.0</TargetFramework>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<Compile Include="Domain.fs" />
+		<Compile Include="persistence\Filter.fs" />
+		<Compile Include="persistence\Command.fs" />
+		<Compile Include="persistence\InMemoryRepository.fs" />
+		<Compile Include="persistence\Repository.fs" />
+		<Compile Include="Message.fs" />
+		<Compile Include="Producer.fs" />
+		<Compile Include="Consumer.fs" />
+		<Compile Include="Program.fs" />
+		<Content Include="appsettings.yaml">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Include="appsettings.yaml">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\embassy-access-core\embassy-access-core.fsproj" />
+	</ItemGroup>
+
 </Project>
