--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -7,6 +7,7 @@
 
 	<ItemGroup>
 		<Compile Include="Domain.fs" />
+		<Compile Include="Mapper.fs" />
 		<Compile Include="persistence\Filter.fs" />
 		<Compile Include="persistence\Command.fs" />
 		<Compile Include="persistence\InMemoryRepository.fs" />
@@ -15,9 +16,6 @@
 		<Compile Include="Producer.fs" />
 		<Compile Include="Consumer.fs" />
 		<Compile Include="Program.fs" />
-		<Content Include="appsettings.yaml">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
