Refactor and enhance request and chat handling
Refactored `InMemoryRepository.fs` to include a more complex condition for finding requests by `Payload` and `Embassy`, and changed `RequestsKey` to `"chats"`. Updated `Consumer.fs` functions to accept a `configuration` parameter. Refined `Message.fs` to streamline request and chat creation logic. Modified `Program.fs` to pass `configuration` to `start` and removed `CancellationToken.None`. Added new persistence and workday settings in `appsettings.yaml`. Updated `Repository.fs` to handle `chat` instead of `request`. Refactored `Temporary.fs` and `Russian.fs` to use `InMemory` storage directly.

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -4,6 +4,10 @@ Logging:
   LogLevel:
     Default: Debug
 
+Persistence:
+  FileSystem:
+    Requests: "/data/requests"
+
 Workdays: &Workdays
   StartTime: '00:00:00'
   StopTime: '23:00:00'
