Add file system and in-memory persistence modules
Updated project files to include new paths and modules for `InMemoryRepository` and `FileSystemRepository`. Refactored `InMemoryRepository.fs` and added `FileSystemRepository.fs` to handle persistence operations for `Request` and `Chat` entities. Introduced `Query` and `Command` submodules for CRUD operations, including JSON serialization/deserialization and pagination. Enhanced error handling and cancellation token support. Marked `fsharp-persistence` submodule as dirty.

--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -7,7 +7,8 @@
     <Compile Include="Mapper.fs" />
     <Compile Include="persistence\Query.fs" />
     <Compile Include="persistence\Command.fs" />
-    <Compile Include="persistence\InMemoryRepository.fs" />
+    <Compile Include="persistence\repositories\InMemoryRepository.fs" />
+    <Compile Include="persistence\repositories\FileSystemRepository.fs" />
     <Compile Include="persistence\Repository.fs" />
     <Compile Include="embassies\russian\Domain.fs" />
     <Compile Include="embassies\russian\Core.fs" />
