--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -10,7 +10,8 @@
 		<Compile Include="Mapper.fs" />
 		<Compile Include="persistence\Query.fs" />
 		<Compile Include="persistence\Command.fs" />
-		<Compile Include="persistence\InMemoryRepository.fs" />
+		<Compile Include="persistence\repositories\FileSystemRepository.fs" />
+		<Compile Include="persistence\repositories\InMemoryRepository.fs" />
 		<Compile Include="persistence\Repository.fs" />
 		<Compile Include="Message.fs" />
 		<Compile Include="Producer.fs" />
