Refactor storage and key handling; update requests data
Refactored the codebase to improve modularity and maintainability:
- Introduced a new `Key` module in `Domain.fs` for constants.
- Updated `Repository.fs` to include `Persistence.Domain` and remove redundant `open` statements.
- Replaced hardcoded `RequestsKey` with `Key.Requests` in `InMemoryRepository.fs`.
- Updated `Consumer.fs` to use `Domain.Key.EMBASSY_ACCESS_TELEGRAM_BOT_TOKEN`.
- Updated `Message.fs` and `Producer.fs` to use `Storage.Context.InMemory`.
- Refactored `Initializer.fs` for configuration-based initialization.
- Updated `Temporary.fs` and `Russian.fs` to use `Key.Requests` and configuration for file paths.
- Added a new `FileSystem` section in `appsettings.yaml`.
- Marked `fsharp-persistence` subproject as dirty.
- Added new JSON data entries to `requests.txt`.
- Refactored `Persistence.Domain` to include new types and modules for storage contexts.
- Updated `Storage.fs` to use the new `Persistence.Domain` structure and added `getConnectionString` function.
- Removed redundant `Compile` entries in `fsharp-persistence.fsproj`.
- Integrated `Persistence.FileSystem.Domain` and `Persistence.InMemory.Domain` into `Persistence.Domain`.
- Updated `Persistence.FileSystem.Storage` and `Persistence.InMemory.Storage` to use the new structure and added `createFilePath` function.

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -5,8 +5,7 @@ Logging:
     Default: Debug
 
 Persistence:
-  FileSystem:
-    Requests: "/data/requests"
+  FileSystem: "C:/"
 
 Workdays: &Workdays
   StartTime: '00:00:00'
