Refactor submodules and add new files for persistence storage

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -13,6 +13,7 @@
 		<Compile Include="persistence\repositories\FileSystemRepository.fs" />
 		<Compile Include="persistence\repositories\InMemoryRepository.fs" />
 		<Compile Include="persistence\Repository.fs" />
+		<Compile Include="persistence\Storage.fs" />
 		<Compile Include="Message.fs" />
 		<Compile Include="Producer.fs" />
 		<Compile Include="Consumer.fs" />
