--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -7,6 +7,7 @@
 
 	<ItemGroup>
 		<Compile Include="Settings.fs" />
+		<Compile Include="persistence\Storage.fs" />
 		<Compile Include="embassies\Russian.fs" />
 		<Compile Include="countries\Albania.fs" />
 		<Compile Include="countries\Bosnia.fs" />
