Refactor response handling and improve error logging
Introduced new modules `EA.Telegram.Responses` with submodules `Buttons`, `Response`, and `Text` to handle Telegram bot responses. Refactored `Core.fs`, `Consumer.fs`, `Domain.fs`, and `Producer.fs` to use these new modules. Removed `Message.fs` and updated project file structure accordingly. Enhanced error handling and logging in `Client.fs`. Ensured all new modules and functions use `[<RequireQualifiedAccess>]` for better code organization. Utilized `ResultAsync` and `async` workflows for robust asynchronous operations.

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -14,7 +14,9 @@
 		<Compile Include="persistence\repositories\InMemoryRepository.fs" />
 		<Compile Include="persistence\Repository.fs" />
 		<Compile Include="persistence\Storage.fs" />
-		<Compile Include="Message.fs" />
+		<Compile Include="responses\Response.fs" />
+		<Compile Include="responses\Buttons.fs" />
+		<Compile Include="responses\Text.fs" />
 		<Compile Include="Producer.fs" />
 		<Compile Include="Consumer.fs" />
 		<Compile Include="Program.fs" />
