--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -8,17 +8,14 @@
 	<ItemGroup>
 		<Compile Include="Domain.fs" />
 		<Compile Include="Mapper.fs" />
-		<Compile Include="SerDe.fs" />
-		<Compile Include="Command.fs" />
 		<Compile Include="persistence\Query.fs" />
 		<Compile Include="persistence\Command.fs" />
 		<Compile Include="persistence\repositories\FileSystemRepository.fs" />
 		<Compile Include="persistence\repositories\InMemoryRepository.fs" />
 		<Compile Include="persistence\Repository.fs" />
 		<Compile Include="persistence\Storage.fs" />
-		<Compile Include="responses\Response.fs" />
-		<Compile Include="responses\Buttons.fs" />
-		<Compile Include="responses\Text.fs" />
+		<Compile Include="Response.fs" />
+		<Compile Include="Command.fs" />
 		<Compile Include="Producer.fs" />
 		<Compile Include="Consumer.fs" />
 		<Compile Include="Program.fs" />
