--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -8,6 +8,7 @@
 	<ItemGroup>
 		<Compile Include="Domain.fs" />
 		<Compile Include="Mapper.fs" />
+		<Compile Include="SerDe.fs" />
 		<Compile Include="persistence\Query.fs" />
 		<Compile Include="persistence\Command.fs" />
 		<Compile Include="persistence\repositories\FileSystemRepository.fs" />
