Update submodules and add Docker configuration files

--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -3,11 +3,11 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net8.0</TargetFramework>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<Compile Include="Settings.fs" />
-		<Compile Include="persistence\Storage.fs" />
 		<Compile Include="embassies\Russian.fs" />
 		<Compile Include="countries\Albania.fs" />
 		<Compile Include="countries\Bosnia.fs" />
@@ -26,6 +26,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Content Include="Dockerfile" />
+		<Content Include="..\..\.dockerignore">
+		  <Link>.dockerignore</Link>
+		</Content>
 		<Content Include="appsettings.yaml">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
@@ -33,6 +37,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\submodules\fsharp-worker\src\fsharp-worker.fsproj" />
+		<ProjectReference Include="..\embassy-access-core\embassy-access-core.fsproj" />
 		<ProjectReference Include="..\embassy-access-telegram\embassy-access-telegram.fsproj" />
 	</ItemGroup>
 
