--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -1,28 +1,35 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-  </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="Domain.fs" />
-    <Compile Include="Mapper.fs" />
-    <Compile Include="persistence\Query.fs" />
-    <Compile Include="persistence\Command.fs" />
-    <Compile Include="persistence\repositories\InMemoryRepository.fs" />
-    <Compile Include="persistence\repositories\FileSystemRepository.fs" />
-    <Compile Include="persistence\Repository.fs" />
-    <Compile Include="embassies\russian\Domain.fs" />
-    <Compile Include="embassies\russian\Core.fs" />
-    <Compile Include="embassies\russian\Deps.fs" />
-    <Compile Include="Notification.fs" />
-    <Compile Include="Api.fs" />
-    <Compile Include="Deps.fs" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="SkiaSharp" Version="2.88.8" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\submodules\fsharp-infrastructure\src\fsharp-infrastructure.fsproj" />
-    <ProjectReference Include="..\..\submodules\fsharp-persistence\src\fsharp-persistence.fsproj" />
-    <ProjectReference Include="..\..\submodules\fsharp-web\src\fsharp-web.fsproj" />
-  </ItemGroup>
+
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <Compile Include="Domain.fs"/>
+        <Compile Include="SerDe.fs"/>
+        <Compile Include="Mapper.fs"/>
+        <Compile Include="persistence\Query.fs"/>
+        <Compile Include="persistence\Command.fs"/>
+        <Compile Include="persistence\repositories\InMemoryRepository.fs"/>
+        <Compile Include="persistence\repositories\FileSystemRepository.fs"/>
+        <Compile Include="persistence\Repository.fs"/>
+        <Compile Include="persistence\Storage.fs"/>
+        <Compile Include="embassies\russian\Domain.fs"/>
+        <Compile Include="embassies\russian\Core.fs"/>
+        <Compile Include="embassies\russian\Deps.fs"/>
+        <Compile Include="Notification.fs"/>
+        <Compile Include="Api.fs"/>
+        <Compile Include="Deps.fs"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="SkiaSharp" Version="2.88.8"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\..\submodules\fsharp-infrastructure\src\fsharp-infrastructure.fsproj"/>
+        <ProjectReference Include="..\..\submodules\fsharp-persistence\src\fsharp-persistence.fsproj"/>
+        <ProjectReference Include="..\..\submodules\fsharp-web\src\fsharp-web.fsproj"/>
+    </ItemGroup>
+
 </Project>
