--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -1,35 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<OutputType>Exe</OutputType>
-		<TargetFramework>net8.0</TargetFramework>
-	</PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+    </PropertyGroup>
 
-	<ItemGroup>
-		<Compile Include="Domain.fs" />
-		<Compile Include="Mapper.fs" />
-		<Compile Include="SerDe.fs" />
-		<Compile Include="persistence\Query.fs" />
-		<Compile Include="persistence\Command.fs" />
-		<Compile Include="persistence\repositories\FileSystemRepository.fs" />
-		<Compile Include="persistence\repositories\InMemoryRepository.fs" />
-		<Compile Include="persistence\Repository.fs" />
-		<Compile Include="persistence\Storage.fs" />
-		<Compile Include="Response.fs" />
-		<Compile Include="Command.fs" />
-		<Compile Include="Producer.fs" />
-		<Compile Include="Consumer.fs" />
-		<Compile Include="Program.fs" />
-	</ItemGroup>
+    <ItemGroup>
+        <Compile Include="Domain.fs"/>
+        <Compile Include="Mapper.fs"/>
+        <Compile Include="persistence\Query.fs"/>
+        <Compile Include="persistence\Command.fs"/>
+        <Compile Include="persistence\repositories\FileSystemRepository.fs"/>
+        <Compile Include="persistence\repositories\InMemoryRepository.fs"/>
+        <Compile Include="persistence\Repository.fs"/>
+        <Compile Include="persistence\Storage.fs"/>
+        <Compile Include="Command.fs"/>
+        <Compile Include="CommandHandler.fs"/>
+        <Compile Include="Consumer.fs"/>
+        <Compile Include="Producer.fs"/>
+    </ItemGroup>
 
-	<ItemGroup>
-		<Content Include="appsettings.yaml">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
-	</ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\embassy-access-core\embassy-access-core.fsproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\embassy-access-core\embassy-access-core.fsproj"/>
+    </ItemGroup>
 
 </Project>
