--- a/.docker-compose/docker-compose.yaml
+++ b/.docker-compose/docker-compose.yaml
@@ -10,3 +10,15 @@
     environment:
       - ANTI_CAPTCHA_API_KEY=${ANTI_CAPTCHA_API_KEY}
       - EMBASSY_ACCESS_TELEGRAM_BOT_TOKEN=${EMBASSY_ACCESS_TELEGRAM_BOT_TOKEN}
+      
+  embassy-access-telegram:
+    image: embassy-access-telegram
+    container_name: embassy-access-telegram
+    build:
+      context: ../
+      dockerfile: ./src/embassy-access-telegram-api/Dockerfile
+    env_file:
+      - .env
+    environment:
+      - ANTI_CAPTCHA_API_KEY=${ANTI_CAPTCHA_API_KEY}
+      - EMBASSY_ACCESS_TELEGRAM_BOT_TOKEN=${EMBASSY_ACCESS_TELEGRAM_BOT_TOKEN}
