--- a/.docker-compose/docker-compose.yaml
+++ b/.docker-compose/docker-compose.yaml
@@ -1,24 +1,10 @@
 ﻿services:
-  embassy-access-worker:
-    image: embassy-access-worker
+  embassy-access:
+    image: embassy-access
     container_name: embassy-access-worker
     build:
       context: ../
       dockerfile: ./src/embassy-access-worker/Dockerfile
-    env_file:
-      - .env
-    environment:
-      - ANTI_CAPTCHA_API_KEY=${ANTI_CAPTCHA_API_KEY}
-      - EMBASSY_ACCESS_TELEGRAM_BOT_TOKEN=${EMBASSY_ACCESS_TELEGRAM_BOT_TOKEN}
-    volumes:
-      - ./data:/app/data:rw
-      
-  embassy-access-telegram:
-    image: embassy-access-telegram
-    container_name: embassy-access-telegram
-    build:
-      context: ../
-      dockerfile: ./src/embassy-access-telegram-api/Dockerfile
     env_file:
       - .env
     environment:
