--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -5,7 +5,7 @@ Logging:
     Default: Information
 
 Persistence:
-  FileSystem: "C:/"
+  FileSystem: "/app/data"
 
 Workdays: &Workdays
   StartTime: '00:00:00'
