--- a/.gitmodules
+++ b/.gitmodules
@@ -1,16 +1,16 @@
 [submodule "submodules/fsharp-worker"]
 	path = submodules/fsharp-worker
 	url = https://github.com/masterlifting/fsharp-worker.git
-	branch = dev
+	branch = dev-feature-infrastructure_update
 [submodule "submodules/fsharp-web"]
 	path = submodules/fsharp-web
 	url = https://github.com/masterlifting/fsharp-web.git
-	branch = dev
+	branch = dev-feature-infrastructure_update
 [submodule "submodules/fsharp-persistence"]
 	path = submodules/fsharp-persistence
 	url = https://github.com/masterlifting/fsharp-persistence.git
-	branch = dev
+	branch = dev-feature-infrastructure_update
 [submodule "submodules/fsharp-infrastructure"]
 	path = submodules/fsharp-infrastructure
 	url = https://github.com/masterlifting/fsharp-infrastructure.git
-	branch = dev
+	branch = dev-feature-infrastructure_update
