Add service types and handlers for passport, notary, and citizenship services

--- a/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
+++ b/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
@@ -7,11 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="services\passport\Domain.fs" />
         <Compile Include="Domain.fs" />
         <Compile Include="Core.fs" />
         <Compile Include="Deps.fs" />
         <Compile Include="API.fs" />
+        <Folder Include="handlers\kdmid.ru\" />
     </ItemGroup>
 
     <ItemGroup>
