--- a/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
+++ b/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
@@ -9,16 +9,17 @@
     <ItemGroup>
         <Compile Include="handlers\city.kdmid.ru\Domain.fs" />
         <Compile Include="handlers\city.kdmid.ru\web\Http.fs" />
-        <Compile Include="handlers\city.kdmid.ru\core\Common.fs" />
+        <Compile Include="handlers\city.kdmid.ru\web\Html.fs" />
         <Compile Include="handlers\city.kdmid.ru\core\InitialPage.fs" />
         <Compile Include="handlers\city.kdmid.ru\core\ValidationPage.fs" />
         <Compile Include="handlers\city.kdmid.ru\core\AppointmentsPage.fs" />
         <Compile Include="handlers\city.kdmid.ru\core\ConfirmationPage.fs" />
         <Compile Include="handlers\city.kdmid.ru\core\Request.fs" />
-        <Compile Include="handlers\city.kdmid.ru\Deps.fs" />
+        <Compile Include="handlers\city.kdmid.ru\Dependencies.fs" />
         <Compile Include="handlers\city.kdmid.ru\API.fs" />
         <Compile Include="handlers\info.midpass.ru\Domain.fs" />
         <Compile Include="Domain.fs" />
+        <Compile Include="Dependencies.fs" />
         <Compile Include="API.fs" />
     </ItemGroup>
 
