--- a/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
+++ b/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
@@ -7,23 +7,23 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="handlers\city.kdmid.ru\Domain.fs" />
-        <Compile Include="handlers\city.kdmid.ru\web\Http.fs" />
-        <Compile Include="handlers\city.kdmid.ru\web\Html.fs" />
-        <Compile Include="handlers\city.kdmid.ru\core\InitialPage.fs" />
-        <Compile Include="handlers\city.kdmid.ru\core\ValidationPage.fs" />
-        <Compile Include="handlers\city.kdmid.ru\core\AppointmentsPage.fs" />
-        <Compile Include="handlers\city.kdmid.ru\core\ConfirmationPage.fs" />
-        <Compile Include="handlers\city.kdmid.ru\core\Request.fs" />
-        <Compile Include="handlers\city.kdmid.ru\Dependencies.fs" />
-        <Compile Include="handlers\city.kdmid.ru\API.fs" />
-        <Compile Include="handlers\info.midpass.ru\Domain.fs" />
+        <Compile Include="services\city.kdmid.ru\Domain.fs" />
+        <Compile Include="services\city.kdmid.ru\web\Http.fs" />
+        <Compile Include="services\city.kdmid.ru\web\Html.fs" />
+        <Compile Include="services\city.kdmid.ru\core\InitialPage.fs" />
+        <Compile Include="services\city.kdmid.ru\core\ValidationPage.fs" />
+        <Compile Include="services\city.kdmid.ru\core\AppointmentsPage.fs" />
+        <Compile Include="services\city.kdmid.ru\core\ConfirmationPage.fs" />
+        <Compile Include="services\city.kdmid.ru\core\Request.fs" />
+        <Compile Include="services\city.kdmid.ru\core\Background.fs" />
+        <Compile Include="services\city.kdmid.ru\API.fs" />
+        <Compile Include="services\info.midpass.ru\Domain.fs" />
         <Compile Include="Domain.fs" />
-        <Compile Include="Dependencies.fs" />
         <Compile Include="API.fs" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\submodules\fsharp-worker\src\fsharp-worker.fsproj" />
       <ProjectReference Include="..\..\embassy-access-core\embassy-access-core.fsproj" />
     </ItemGroup>
 
