Refactor embassy access modules: update project references, remove unused files, and rename Credentials to Payload

--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -34,6 +34,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\submodules\fsharp-worker\src\fsharp-worker.fsproj" />
+		<ProjectReference Include="..\embassy-access-modules\embassy-access-modules-russian\embassy-access-modules-russian.fsproj" />
 		<ProjectReference Include="..\embassy-access-telegram\embassy-access-telegram.fsproj" />
 	</ItemGroup>
 
