--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -45,7 +45,7 @@ Worker:
                 - <<: *SearchAppointments
                 - <<: *MakeAppointments
           Schedule:
-            TimeShift: 1
+            TimeZone: 1
             <<: *Workdays
 
     - Name: Germany
@@ -59,7 +59,7 @@ Worker:
                 - <<: *SearchAppointments
                 - <<: *MakeAppointments
           Schedule:
-            TimeShift: 1
+            TimeZone: 1
             <<: *Workdays
 
     - Name: France
@@ -73,7 +73,7 @@ Worker:
                 - <<: *SearchAppointments
                 - <<: *MakeAppointments
           Schedule:
-            TimeShift: 1
+            TimeZone: 1
             <<: *Workdays
 
     - Name: Montenegro
@@ -87,7 +87,7 @@ Worker:
                 - <<: *SearchAppointments
                 - <<: *MakeAppointments
           Schedule:
-            TimeShift: 1
+            TimeZone: 1
             <<: *Workdays
 
     - Name: Ireland
@@ -101,7 +101,7 @@ Worker:
                 - <<: *SearchAppointments
                 - <<: *MakeAppointments
           Schedule:
-            TimeShift: 0
+            TimeZone: 0
             <<: *Workdays
 
     - Name: Switzerland
@@ -115,7 +115,7 @@ Worker:
                 - <<: *SearchAppointments
                 - <<: *MakeAppointments
           Schedule:
-            TimeShift: 1
+            TimeZone: 1
             <<: *Workdays
 
     - Name: Finland
@@ -129,7 +129,7 @@ Worker:
                 - <<: *SearchAppointments
                 - <<: *MakeAppointments
           Schedule:
-            TimeShift: 2
+            TimeZone: 2
             <<: *Workdays
 
     - Name: Netherlands
@@ -143,7 +143,7 @@ Worker:
                 - <<: *SearchAppointments
                 - <<: *MakeAppointments
           Schedule:
-            TimeShift: 1
+            TimeZone: 1
             <<: *Workdays
 
     - Name: Albania
@@ -157,7 +157,7 @@ Worker:
                 - <<: *SearchAppointments
                 - <<: *MakeAppointments
           Schedule:
-            TimeShift: 1
+            TimeZone: 1
             <<: *Workdays
 
     - Name: Slovenia
@@ -171,7 +171,7 @@ Worker:
                 - <<: *SearchAppointments
                 - <<: *MakeAppointments
           Schedule:
-            TimeShift: 1
+            TimeZone: 1
             <<: *Workdays
 
     - Name: Bosnia
@@ -185,7 +185,7 @@ Worker:
                 - <<: *SearchAppointments
                 - <<: *MakeAppointments
           Schedule:
-            TimeShift: 1
+            TimeZone: 1
             <<: *Workdays
 
     - Name: Hungary
@@ -199,5 +199,5 @@ Worker:
                 - <<: *SearchAppointments
                 - <<: *MakeAppointments
           Schedule:
-            TimeShift: 1
+            TimeZone: 1
             <<: *Workdays
