Add SerDe module for Russian embassy services: implement serialization and deserialization functions, update project file, and enhance command handler logic

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -2,7 +2,7 @@
 
 Logging:
   LogLevel:
-    Default: Information
+    Default: Debug
 
 Persistence:
   FileSystem: "/usr/src/embassy-access-data"
@@ -14,7 +14,7 @@ Workdays: &Workdays
 
 SearchAppointments: &SearchAppointments
   Name: Search appointments
-  Enabled: true
+  Enabled: false
   Wait: false
   Duration: '00:02:00'
 
@@ -33,6 +33,8 @@ Worker:
   Name: Worker
   Enabled: true
   Wait: false
+  Schedule:
+    <<: *Workdays
   Tasks:
     - Name: Serbia
       Parallel: true
