--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -16,6 +16,7 @@
 		<Compile Include="countries\Germany.fs" />
 		<Compile Include="countries\Hungary.fs" />
 		<Compile Include="countries\Ireland.fs" />
+		<Compile Include="countries\Italy.fs" />
 		<Compile Include="countries\Montenegro.fs" />
 		<Compile Include="countries\Netherlands.fs" />
 		<Compile Include="countries\Serbia.fs" />
