--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
         <Compile Include="Domain.fs"/>
+        <Compile Include="Data.fs" />
         <Compile Include="SerDe.fs"/>
         <Compile Include="Mapper.fs"/>
         <Compile Include="persistence\Query.fs"/>
