--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Compile Include="Settings.fs" />
+		<Compile Include="Data.fs" />
 		<Compile Include="embassies\Russian.fs" />
 		<Compile Include="countries\Albania.fs" />
 		<Compile Include="countries\Bosnia.fs" />
