--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -7,21 +7,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<Compile Include="Domain.fs" />
 		<Compile Include="Data.fs" />
 		<Compile Include="embassies\Russian.fs" />
-		<Compile Include="countries\Albania.fs" />
-		<Compile Include="countries\Bosnia.fs" />
-		<Compile Include="countries\Finland.fs" />
-		<Compile Include="countries\France.fs" />
-		<Compile Include="countries\Germany.fs" />
-		<Compile Include="countries\Hungary.fs" />
-		<Compile Include="countries\Ireland.fs" />
-		<Compile Include="countries\Italy.fs" />
-		<Compile Include="countries\Montenegro.fs" />
-		<Compile Include="countries\Netherlands.fs" />
-		<Compile Include="countries\Serbia.fs" />
-		<Compile Include="countries\Slovenia.fs" />
-		<Compile Include="countries\Switzerland.fs" />
 		<Compile Include="Initializer.fs" />
 		<Compile Include="Program.fs" />
 	</ItemGroup>
