--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -5,6 +5,7 @@
   <ItemGroup>
     <Compile Include="Domain.fs" />
     <Compile Include="Mapper.fs" />
+    <Compile Include="Settings.fs" />
     <Compile Include="persistence\Query.fs" />
     <Compile Include="persistence\Command.fs" />
     <Compile Include="persistence\repositories\InMemoryRepository.fs" />
