--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -8,7 +8,7 @@
 
 	<ItemGroup>
 		<Compile Include="Domain.fs" />
-		<Compile Include="Data.fs" />
+		<Compile Include="Settings.fs" />
 		<Compile Include="embassies\Russian.fs" />
 		<Compile Include="Initializer.fs" />
 		<Compile Include="Program.fs" />
